--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,17 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<vaadin.version>7.0.6</vaadin.version>
 		<vaadin.plugin.version>${vaadin.version}</vaadin.plugin.version>
+		
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	    <apache-commons-io.version>2.1</apache-commons-io.version>
+	    <apache-commons-lang.version>3.1</apache-commons-lang.version>
+	    <httpclient.version>4.1.3</httpclient.version>
+	    <httpcore.version>4.1.3</httpcore.version>
+	    <jackson.version>1.9.2</jackson.version>
+	    <virtuoso-sesame-driver.version>2.0</virtuoso-sesame-driver.version>
+	    <virtuoso-jdbc-driver.version>3.62</virtuoso-jdbc-driver.version>
 	</properties>
+	
 	<repositories>
 		<repository>
 			<id>vaadin-addons</id>
@@ -28,6 +38,51 @@
 				<enabled>true</enabled>
 			</snapshots>
 		</repository>
+		 <repository>
+		      <id>openRDF1</id>
+		      <url>http://repo.aduna-software.org</url>
+		    </repository>
+		    <repository>
+		      <id>openRDF2</id>
+		      <url>http://repo.aduna-software.org/maven2</url>
+		    </repository>
+		    <repository>
+		      <id>openRDF3</id>
+		      <url>http://repo.aduna-software.org/maven2/releases</url>
+		    </repository>
+		    <repository>
+		      <id>maven-general</id>
+		      <url>http://repo2.maven.org/maven2/</url>
+		    </repository>
+		    <repository>
+		      <id>Jena</id>
+		      <url>http://openjena.org/repo</url>
+		        </repository>
+		        <repository>  
+		   <id>maven-restlet</id>  
+		   <name>Public online Restlet repository</name>  
+		   <url>http://maven.restlet.org</url>  
+		</repository>  
+		    <!--
+		    <repository>
+		      <id>The Buzz Media Maven Repository</id>
+		      <url>http://maven.thebuzzmedia.com</url>
+		    </repository> 
+		    -->
+		<repository>
+		        <id>sardine-google-svn-repo</id>
+		        <snapshots> <enabled>true</enabled> </snapshots>
+		        <name>Sardine maven repo at Google Code</name>
+		        <url>http://sardine.googlecode.com/svn/maven/</url>
+		     </repository>
+		    <repository>
+		      <id>Public Maven repo for Saxon 9</id>
+		      <url>http://www2.ph.ed.ac.uk/maven2/</url>
+		    </repository>
+			  <repository>
+			   <id>codehaus-snapshots</id>
+			   <url>http://snapshots.repository.codehaus.org</url>
+			  </repository>
 	</repositories>
 	<pluginRepositories>
 		<pluginRepository>
@@ -41,6 +96,62 @@
 			</snapshots>
 		</pluginRepository>
 	</pluginRepositories>
+	
+	<dependencyManagement>
+	    <!-- For Sesame dependency one requires to import first the pom dependencies -->
+	    <dependencies>
+	      <dependency>
+	        <groupId>org.openrdf.sesame</groupId>
+	        <artifactId>sesame</artifactId>
+	        <version>2.6.7</version>
+	        <type>pom</type>
+	        <scope>import</scope>
+	      </dependency>
+	      <dependency>
+	        <groupId>org.openrdf.sesame</groupId>
+	        <artifactId>sesame-model</artifactId>
+	        <version>2.6.7</version>
+	        <type>pom</type>
+	        <scope>import</scope>
+	      </dependency>
+	      <dependency>
+	        <groupId>org.openrdf.sesame</groupId>
+	        <artifactId>sesame-query</artifactId>
+	        <version>2.6.7</version>
+	        <type>pom</type>
+	        <scope>import</scope>
+	      </dependency>
+	      <dependency>
+	        <groupId>org.openrdf.sesame</groupId>
+	        <artifactId>sesame-queryalgebra-evaluation</artifactId>
+	        <version>2.6.7</version>
+	        <type>pom</type>
+	        <scope>import</scope>
+	      </dependency>
+	      <dependency>
+	        <groupId>org.openrdf.sesame</groupId>
+	        <artifactId>sesame-repository</artifactId>
+	        <version>2.6.7</version>
+	        <type>pom</type>
+	        <scope>import</scope>
+	      </dependency>
+	      <dependency>
+	        <groupId>org.openrdf.sesame</groupId>
+	        <artifactId>sesame-rio-api</artifactId>
+	        <version>2.6.7</version>
+	        <type>pom</type>
+	        <scope>import</scope>
+	      </dependency>
+	      <dependency>
+	        <groupId>org.openrdf.sesame</groupId>
+	        <artifactId>sesame-rio-rdfxml</artifactId>
+	        <version>2.6.7</version>
+	        <type>pom</type>
+	        <scope>import</scope>
+	      </dependency>
+	    </dependencies>
+  	</dependencyManagement>
+	
 	<dependencies>
 		<dependency>
 			<groupId>com.vaadin</groupId>
@@ -91,6 +202,80 @@
 			<artifactId>json-simple</artifactId>
 			<version>1.1</version>
 		  </dependency>
+		  
+	      <dependency>
+		      <groupId>org.openrdf.sesame</groupId>
+		      <artifactId>sesame-model</artifactId>
+		      <version>2.6.7</version>
+		    </dependency>
+		    <dependency>
+		      <groupId>org.openrdf.sesame</groupId>
+		      <artifactId>sesame-query</artifactId>
+		      <version>2.6.7</version>
+		    </dependency>
+		    <dependency>
+		      <groupId>org.openrdf.sesame</groupId>
+		      <artifactId>sesame-queryalgebra-evaluation</artifactId>
+		      <version>2.6.7</version>
+		    </dependency>
+		    <dependency>
+		      <groupId>org.openrdf.sesame</groupId>
+		      <artifactId>sesame-repository-api</artifactId>
+		      <version>2.6.7</version>
+		    </dependency>
+		    <dependency>
+		      <groupId>org.openrdf.sesame</groupId>
+		      <artifactId>sesame-queryparser-sparql</artifactId>
+		      <version>2.6.7</version>
+		    </dependency>
+		    <dependency>
+		      <groupId>org.openrdf.sesame</groupId>
+		      <artifactId>sesame-rio-api</artifactId>
+		      <version>2.6.7</version>
+		    </dependency>
+		    <dependency>
+		      <groupId>org.openrdf.sesame</groupId>
+		      <artifactId>sesame-rio-rdfxml</artifactId>
+		      <version>2.6.7</version>
+		    </dependency>
+		    
+		    <dependency>
+			    <groupId>virtuoso.sesame2</groupId>
+			    <artifactId>driver</artifactId>
+			    <version>2.0</version>
+			    <scope>compile</scope>
+			 </dependency>
+			 <dependency>
+			    <groupId>virtuoso</groupId>
+			    <artifactId>jdbc3</artifactId>
+			   <version>3.62</version>
+			    <scope>runtime</scope>
+			 </dependency>
+			 
+			 <dependency>
+		      <groupId>org.restlet.jee</groupId>
+		      <artifactId>org.restlet</artifactId>
+		      <version>LATEST</version>
+		     </dependency>
+		     
+			<dependency>
+		      <groupId>com.googlecode.sardine</groupId>
+		      <artifactId>sardine</artifactId>
+		      <version>284</version>
+		    </dependency>
+		    
+			<dependency>
+		        <groupId>xerces</groupId>
+		        <artifactId>xercesImpl</artifactId>
+		        <version>2.9.1</version>
+		    </dependency>
+		    
+			<dependency>
+		        <groupId>xml-resolver</groupId>
+		        <artifactId>xml-resolver</artifactId>
+		        <version>1.2</version>
+		     </dependency>
+	      
 	</dependencies>
 
 	<build>
