--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Eclipse
+.classpath
+.settings*
+.project
 # Vaadin cache dir
 /src/main/webapp/VAADIN/gwt-unitCache
 /src/main/webapp/VAADIN/widgetsets
