--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,13 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
+  <repositories>
+    <repository>
+      <id>ldstack</id>
+      <url>http://mvn.linkeddata.org/content/groups/linkeddata.org/</url>
+    </repository>
+  </repositories> 
+    
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -30,12 +37,6 @@
       <artifactId>commons-fileupload</artifactId>
       <version>1.3</version>
     </dependency>
-    <dependency>
-		  <groupId>org.apache.jena</groupId>
-		  <artifactId>apache-jena</artifactId>
-		  <type>pom</type>
-		  <version>2.10.1</version>
-		</dependency>
 		<dependency>
       <groupId>org.codehaus.jackson</groupId>
       <artifactId>jackson-core-asl</artifactId>
@@ -46,6 +47,12 @@
 		  <artifactId>jackson-mapper-asl</artifactId>
 		  <version>1.9.13</version>
 		</dependency>
+    <dependency>
+      <groupId>org.apache.jena</groupId>
+      <artifactId>apache-jena</artifactId>
+      <type>pom</type>
+      <version>2.10.1</version>
+    </dependency>
   </dependencies>
 
   <build>
