--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -26,17 +26,17 @@
   <context-param> 
     <description>Location to save data that is larger than maxMemSize</description> 
     <param-name>temp-data</param-name> 
-    <param-value>/Users/alejandragarciarojas/tmp/upload/temp</param-value> 
+    <param-value>/uploads/tmp/</param-value> 
   </context-param>
   
   <servlet>
-     <servlet-name>UploadServlet</servlet-name>
-     <servlet-class>UploadServlet</servlet-class>
+     <servlet-name>ImportRDF</servlet-name>
+     <servlet-class>ImportRDF</servlet-class>
   </servlet>
 
   <servlet-mapping>
-     <servlet-name>UploadServlet</servlet-name>
-     <url-pattern>/UploadServlet</url-pattern>
+     <servlet-name>ImportRDF</servlet-name>
+     <url-pattern>/ImportRDF</url-pattern>
   </servlet-mapping>
 
   <servlet>
