--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,20 +14,36 @@
     <param-value>/uploads/</param-value> 
   </context-param>
   <context-param> 
-    <description>Maximum file size to be uploaded 50 * 1024</description> 
+    <description>Maximum file size to be uploaded 1024 * 1024</description> 
     <param-name>max-file-size</param-name> 
-    <param-value>51200</param-value> 
+    <param-value>1048576</param-value> 
   </context-param>
   <context-param> 
-    <description>Maximum size that will be stored in memory 4 * 1024</description> 
+    <description>Maximum size that will be stored in memory 20 * 1024</description> 
     <param-name>max-mem-size</param-name> 
-    <param-value>4096</param-value>
+    <param-value>20480</param-value>
   </context-param>
   <context-param> 
     <description>Location to save data that is larger than maxMemSize</description> 
     <param-name>temp-data</param-name> 
     <param-value>/uploads/tmp/</param-value> 
   </context-param>
+  
+<!--   <context-param> 
+    <description>Virtuoso server</description> 
+    <param-name>virtuoso-jdbc</param-name> 
+    <param-value>jdbc:virtuoso://localhost:1111/</param-value> 
+  </context-param>
+  <context-param> 
+    <description>Virtuoso server user</description> 
+    <param-name>virtuoso-user</param-name> 
+    <param-value>dba</param-value> 
+  </context-param>
+    <context-param> 
+    <description>Virtuoso server password</description> 
+    <param-name>virtuoso-password</param-name> 
+    <param-value>dba</param-value> 
+  </context-param> -->
   
   <servlet>
      <servlet-name>ImportRDF</servlet-name>
