--- a/pom.xml
+++ b/pom.xml
@@ -83,10 +83,9 @@
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>tomcat-maven-plugin</artifactId>
         <configuration>
-          <url>http://localhost:8080/manager</url>
+          <url>http://localhost:8080/manager/text</url>
           <server>tomcat</server>
           <path>/${project.build.finalName}</path>
-          <keystorePass>tomcat</keystorePass>
           <!-- <httpsPort>8443</httpsPort> -->
         </configuration>
       </plugin>
