--- a/pom.xml
+++ b/pom.xml
@@ -79,12 +79,11 @@
 			</plugin>
 			<!-- Maven Tomcat Plugin -->
 			<plugin>
-				<groupId>org.apache.tomcat.maven</groupId>
-				<artifactId>tomcat7-maven-plugin</artifactId>
-				<version>2.2</version>
-				<configuration>
-					<url>http://localhost:8080/manager/text</url>
-					<server>tomcat</server>
+			        <groupId>org.codehaus.mojo</groupId>
+			        <artifactId>tomcat-maven-plugin</artifactId>
+			        <configuration>
+			          <url>http://127.0.0.1:8080/manager/text</url>
+			          <server>tomcat</server>
 					<path>/${project.build.finalName}</path>
 				</configuration>
 			</plugin>
