--- a/pom.xml
+++ b/pom.xml
@@ -92,11 +92,12 @@
 			</plugin>
 			<!-- Maven Tomcat Plugin -->
 			<plugin>
-			        <groupId>org.codehaus.mojo</groupId>
-			        <artifactId>tomcat-maven-plugin</artifactId>
-			        <configuration>
-			          <url>http://127.0.0.1:8080/manager/text</url>
-			          <server>tomcat</server>
+				<version>1.1</version>
+		    <groupId>org.codehaus.mojo</groupId>
+		    <artifactId>tomcat-maven-plugin</artifactId>
+		    <configuration>
+		      <url>http://127.0.0.1:8080/manager/text</url>
+		      <server>tomcat</server>
 					<path>/${project.build.finalName}</path>
 				</configuration>
 			</plugin>
