--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -33,7 +33,7 @@
   <context-param> 
     <description>Virtuoso server</description> 
     <param-name>virtuoso-jdbc-conn-string</param-name> 
-    <param-value>jdbc:virtuoso://192.168.2.17:1111/</param-value> 
+    <param-value>jdbc:virtuoso://generator.geoknow.eu:1111/</param-value> 
   </context-param>
   <context-param> 
     <description>Virtuoso server user</description> 
@@ -50,12 +50,12 @@
   <context-param>
     <description>SPARQL Public Endpoint</description> 
     <param-name>sparql-public-endpoint</param-name> 
-    <param-value>http://192.168.2.17:8890/sparql</param-value> 
+    <param-value>http://generator.geoknow.eu:8890/sparql</param-value> 
   </context-param>
   <context-param>
     <description>SPARQL Auth Endpoint</description> 
     <param-name>sparql-auth-endpoint</param-name> 
-    <param-value>http://192.168.2.17:8890/sparql</param-value> 
+    <param-value>http://generator.geoknow.eu:8890/sparql</param-value> 
   </context-param>
   <context-param> 
     <description>Settings Graph</description> 
