--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -58,7 +58,7 @@
   <context-param> 
     <description>SMPT Host</description> 
     <param-name>smtp-host</param-name> 
-    <param-value>***REMOVED***</param-value> 
+    <param-value>smtp.strato.de</param-value> 
   </context-param>
   <context-param> 
     <description>SMPT TLS Port</description> 
