--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>eu.geoknow</groupId>
-	<artifactId>generator</artifactId>
+	<groupId>com.ontos</groupId>
+	<artifactId>ldiw.acc</artifactId>
 	<packaging>war</packaging>
 	<version>1.0.1</version>
-	<name>GeoKnow Generator</name>
+	<name>Ontos LDIW for ACC</name>
 
 	<properties>
 		<endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
