--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+#Framework configuration files
+/src/main/webapp/WEB-INF/web.xml
+/src/main/resources/framework-configuration.ttl
+
 #Mac
 .DS_Store
 
