fixed graphs refresh and store of xml jobs in the triple store

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -9,5 +9,5 @@ log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1
 
 #log4j.logger.rdf=DEBUG
 #log4j.logger.rest=DEBUG
-#log4j.logger.workflow=DEBUG
+log4j.logger.workflow=DEBUG
 #log4j.logger.authentication.web=DEBUG
