--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>eu.geoknow</groupId>
-	<artifactId>generator</artifactId>
+	<artifactId>generator-unister</artifactId>
 	<packaging>war</packaging>
 	<version>1.1.0</version>
 	<name>GeoKnow Generator</name>
@@ -205,11 +205,10 @@
 				<artifactId>tomcat7-maven-plugin</artifactId>
 				<version>2.2</version>
 				<configuration>
+					<server>localhost</server>
+					<url>${tomcat.deploy.url}</url>
 					<path>/${project.build.finalName}</path>
 					<update>true</update>
-					<url>http://localhost:8080/manager/text</url>
-					<username>tomcat</username>
-					<password>tomcat</password>
 				</configuration>
 			</plugin>
 
