integrated contribution update to limes and import, fixed several bugs in coev

--- a/pom.xml
+++ b/pom.xml
@@ -205,7 +205,7 @@
 				<artifactId>tomcat7-maven-plugin</artifactId>
 				<version>2.2</version>
 				<configuration>
-					<server>localhost</server>
+					<server>generator</server>
 					<url>${tomcat.deploy.url}</url>
 					<path>/${project.build.finalName}</path>
 					<update>true</update>
