--- a/pom.xml
+++ b/pom.xml
@@ -213,7 +213,7 @@
 				<artifactId>tomcat7-maven-plugin</artifactId>
 				<version>2.2</version>
 				<configuration>
-					<server>generator</server>
+					<server>localhost</server>
 					<url>${tomcat.deploy.url}</url>
 					<path>/${project.build.finalName}</path>
 					<update>true</update>
