fixed limes, component-header and debian configuration

--- a/pom.xml
+++ b/pom.xml
@@ -41,12 +41,12 @@
 			<scope>provided</scope>
 		</dependency>
 
-    <dependency>
-        <groupId>javax.el</groupId>
-        <artifactId>javax.el-api</artifactId>
-        <version>2.2.4</version>
-        <scope>provided</scope>
-    </dependency>
+		<dependency>
+			<groupId>javax.el</groupId>
+			<artifactId>javax.el-api</artifactId>
+			<version>2.2.4</version>
+			<scope>provided</scope>
+		</dependency>
 
 		<dependency>
 			<groupId>commons-fileupload</groupId>
@@ -213,7 +213,7 @@
 				<artifactId>tomcat7-maven-plugin</artifactId>
 				<version>2.2</version>
 				<configuration>
-					<server>localhost</server>
+					<server>generator</server>
 					<url>${tomcat.deploy.url}</url>
 					<path>/${project.build.finalName}</path>
 					<update>true</update>
@@ -222,93 +222,65 @@
 
 			<!-- For creating the debian package -->
 			<plugin>
-			  <artifactId>jdeb</artifactId>
-			  <groupId>org.vafer</groupId>
-			  <version>1.3</version>
-			  <executions>
-			    <execution>
-			      <phase>package</phase>
-			      <goals>
-			        <goal>jdeb</goal>
-			      </goals>
-			      <configuration>
-			      	
-			      	<deb>${project.build.directory}/${project.artifactId}_${project.version}_all.deb</deb>
-			      	<changesOut>${project.build.directory}/${project.artifactId}_${project.version}_all.changes</changesOut>
+				<artifactId>jdeb</artifactId>
+				<groupId>org.vafer</groupId>
+				<version>1.3</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>jdeb</goal>
+						</goals>
+						<configuration>
+							<deb>${project.build.directory}/${project.artifactId}_${project.version}_all.deb</deb>
+							<changesOut>${project.build.directory}/${project.artifactId}_${project.version}_all.changes</changesOut>
+							<signPackage>true</signPackage>
+							<signMethod>dpkg-sig</signMethod>
+							<signRole>builder</signRole>
+							<dataSet>
+								<data>
+									<type>template</type>
+									<paths>
+										<path>/jobs</path>
+									</paths>
+									<mapper>
+										<type>perm</type>
+										<prefix>/var/generator</prefix>
+										<user>tomcat7</user>
+										<group>tomcat7</group>
+									</mapper>
+								</data>
+								<data>
+									<src>${project.build.directory}/${project.build.finalName}.war</src>
+									<type>file</type>
+									<mapper>
+										<type>perm</type>
+										<prefix>/var/lib/tomcat7/webapps</prefix>
+									</mapper>
+								</data>
+							</dataSet>
 
-				<dataSet>
-					<data>
-						<type>template</type>
-						<paths>
-							<path>/jobs</path>
-       						</paths>
-						<mapper>
-                                    			<type>perm</type>
-				 			<prefix>/var/generator</prefix>					
-                                    			<user>tomcat7</user>
-                                    			<group>tomcat7</group>
-                                  		</mapper>
-    					</data> 
-                                        <data>
-				          <src>${project.build.directory}/${project.build.finalName}.war</src>
-				          <type>file</type>
-				          <mapper>
-				            <type>perm</type>
-				            <prefix>/var/lib/tomcat7/webapps</prefix>
-				          </mapper>
-				        </data>
-				      </dataSet>
-				      
-				      <changesOut></changesOut>
-			    	</configuration>
-			 		</execution>
+							<changesOut></changesOut>
+						</configuration>
+					</execution>
 				</executions>
 			</plugin>
 
-			<!-- To generate JAVA classes of the ontology models
-			I tried to use this plugin to automatoicalluy create java clasess, but I didnt
-			succeed in reading the configuration file 
-			<plugin>
-				<groupId>org.apache.jena</groupId>
-				<artifactId>jena-maven-tools</artifactId>
-				<version>0.8</version>
-				<configuration>
-					<includes>
-						<include>src/main/vocabs/framework-ontology_0.1.2.ttl</include>
-						<include>src/main/vocabs/ldsi-schema_0.1.1.ttl</include>
-						<include>src/main/vocabs/sparql-service-description.ttl</include>
-					</includes>
-					<fileOptions>
-						<source>
-							<input>src/main/vocabs/framework-ontology_0.1.2.ttl</input>
-							<class-name>LDIWO</class-name>
-							<config-file>src/main/vocabs/schemagen-config.xml</config-file>
-							<output>src/main/java/com/ontos/ldiw/vocabulary</output>
-						</source>
-						<source>
-							<input>src/main/vocabs/ldsi-schema_0.1.1.ttl</input>
-              <class-name>LDIS</class-name>
-              <package-name>com.ontos.ldiw.vocabulary</package-name>
-              <output>src/main/java/com/ontos/ldiw/vocabulary</output>
-              <ontology>true</ontology>
-						</source>
-						<source>
-              <input>src/main/vocabs/sparql-service-description.ttl</input>
-              <class-name>SD</class-name>
-              <package-name>com.ontos.ldiw.vocabulary</package-name>
-              <output>src/main/java/com/ontos/ldiw/vocabulary</output>
-            </source>
-					</fileOptions>
-				</configuration>
-				<executions>
-					<execution>
-						<id>schemagen</id>
-						<goals>
-							<goal>translate</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin> -->
+			<!-- To generate JAVA classes of the ontology models I tried to use this 
+				plugin to automatoicalluy create java clasess, but I didnt succeed in reading 
+				the configuration file <plugin> <groupId>org.apache.jena</groupId> <artifactId>jena-maven-tools</artifactId> 
+				<version>0.8</version> <configuration> <includes> <include>src/main/vocabs/framework-ontology_0.1.2.ttl</include> 
+				<include>src/main/vocabs/ldsi-schema_0.1.1.ttl</include> <include>src/main/vocabs/sparql-service-description.ttl</include> 
+				</includes> <fileOptions> <source> <input>src/main/vocabs/framework-ontology_0.1.2.ttl</input> 
+				<class-name>LDIWO</class-name> <config-file>src/main/vocabs/schemagen-config.xml</config-file> 
+				<output>src/main/java/com/ontos/ldiw/vocabulary</output> </source> <source> 
+				<input>src/main/vocabs/ldsi-schema_0.1.1.ttl</input> <class-name>LDIS</class-name> 
+				<package-name>com.ontos.ldiw.vocabulary</package-name> <output>src/main/java/com/ontos/ldiw/vocabulary</output> 
+				<ontology>true</ontology> </source> <source> <input>src/main/vocabs/sparql-service-description.ttl</input> 
+				<class-name>SD</class-name> <package-name>com.ontos.ldiw.vocabulary</package-name> 
+				<output>src/main/java/com/ontos/ldiw/vocabulary</output> </source> </fileOptions> 
+				</configuration> <executions> <execution> <id>schemagen</id> <goals> <goal>translate</goal> 
+				</goals> </execution> </executions> </plugin> -->
 		</plugins>
 	</build>
 
