--- a/src/deb/control/control
+++ b/src/deb/control/control
@@ -3,13 +3,13 @@ Version: 1.2.0
 Section: web
 Priority: extra
 Architecture: all
-Depends: oracle-java8-installer, tomcat7
+Depends: tomcat7,limes-service,deer-service,virtuoso-opensource,spring-batch-admin-geoknow,sparqlify-tomcat7,facete2-tomcat7,triplegeo-service
 Maintainer: Alejandra Garcia-Rojas M <alejandra.garciarojas@ontos.com>
-Distribution: development
+Distribution: ldstack-nightly
 Homepage: http://stack.linkeddata.org/getting-started/geoknow-generator/
 Description: The GeoKnow Generator provides a workbench that integrates of tools
- developed within [GeoKnow project](http://geoknow.eu/),
- and are part of the [Linked Data Stack](http://stack.linkeddata.org/).
+ developed within GeoKnow project (http://geoknow.eu/),
+ and are part of the Linked Data Stack (http://stack.linkeddata.org/).
  These workbench aim to provide the required methods and tools
  to easly integrate and process geospatial data
  across a wide range of data sources on the web of data.
