--- a/pom.xml
+++ b/pom.xml
@@ -213,7 +213,7 @@
 				<artifactId>tomcat7-maven-plugin</artifactId>
 				<version>2.2</version>
 				<configuration>
-					<server>generator</server>
+					<server>localhost</server>
 					<url>${tomcat.deploy.url}</url>
 					<path>/${project.build.finalName}</path>
 					<update>true</update>
@@ -234,9 +234,9 @@
 						<configuration>
 							<deb>${project.build.directory}/${project.artifactId}_${project.version}_all.deb</deb>
 							<changesOut>${project.build.directory}/${project.artifactId}_${project.version}_all.changes</changesOut>
-							<signPackage>true</signPackage>
+							<!-- <signPackage>true</signPackage>
 							<signMethod>dpkg-sig</signMethod>
-							<signRole>builder</signRole>
+							<signRole>builder</signRole> -->
 							<dataSet>
 								<data>
 									<type>template</type>
