--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>eu.geoknow</groupId>
-	<artifactId>geoknow-generator-ui</artifactId>
+	<artifactId>brox-generator-ui</artifactId>
 	<packaging>war</packaging>
 	<version>1.2.0</version>
 	<name>GeoKnow Generator</name>
